fixes date on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -729,7 +729,7 @@ input::-webkit-input-placeholder{
     }
 
     .svg-container-title{
-      margin-bottom: 15px;
+      margin-bottom: 60px;
     }
 
     .poemline{
